//protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

syntax = "proto3";

option go_package = "./internal/pkg/user/delivery/grpc";

import "google/protobuf/empty.proto";

service Auth {
    rpc Login(ExistedUserData) returns (User);
    rpc Logout(SessionData) returns (google.protobuf.Empty);
    rpc CheckAuth(SessionData) returns (User);
    rpc EditEmail(EditEmailRequest) returns (User);
}

message ExistedUserData {
    string Email = 1;
    string Password = 2;
}

message User {
    uint64 ID = 1;
    string Email = 2;
    string PasswordHash = 3;
    string Avatar = 4;
    bool IsAuth = 5;
}

message SessionData {
    string SessionID = 1;
}

message EditEmailRequest {
    uint64 ID = 1;
    string Email = 2;
}